Drop Java 8 support completely